fixed java 17 syntax error